# spm-swift-package

./: .gitignore  .mergify.yml  .rumdl.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  mise.toml  release-plz.toml  rust-toolchain.toml  script.sh
.claude/skills/open-pr/: SKILL.md
.github/workflows/: CI.yml  Release.yml  autofix.yml  release-plz.yml
api/: Cargo.toml  README.md
api/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  header.rs  lib.rs  main.rs
crates/cli/src/cli/: cli_controller.rs  mod.rs
crates/cli/src/core/: error.rs  mod.rs  platform_validator.rs  spm_builder.rs
crates/cli/src/core/file/: file_creator.rs  mod.rs  project_file.rs  project_file_writer.rs  project_templates.rs
crates/cli/src/domain/: mod.rs  platform_validator.rs  spm_builder.rs
crates/cli/src/domain/builder/: mod.rs  spm_builder.rs
crates/cli/src/domain/file/: project_file.rs  project_templates.rs
crates/cli/src/domain/platform/: platform_validator.rs
crates/cli/src/domain/usecase/: usecase.rs
crates/cli/src/presentation/: cli_controller.rs  header.rs  mod.rs
crates/cli/src/ui/: mod.rs  spm_view.rs  theme_colors.rs
crates/cli/src/utils/: mod.rs  xcode.rs
crates/cli/tests/: header_snapshot_tests.rs  platform_validator_tests.rs  project_file_tests.rs  project_templates_tests.rs  spm_builder_tests.rs
crates/cli/tests/snapshots/: header_snapshot_tests__show_header_snapshot.snap  project_templates_tests__changelog_content.snap  project_templates_tests__package_swift_with_plugin.snap  project_templates_tests__package_swift_without_plugin.snap  project_templates_tests__project_swift_content.snap  project_templates_tests__readme_content.snap  project_templates_tests__spi_content.snap  project_templates_tests__swift_testing_content.snap  project_templates_tests__swiftlint_content.snap  project_templates_tests__xctest_content.snap
crates/spm_core/: Cargo.toml
crates/spm_core/src/domain/file/: project_file.rs
crates/spm_core/src/domain/usecase/: usecase.rs
crates/spm_core/tests/: project_file_tests.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs  xtask_command.rs
src/: content.rs  fields_results.rs  header.rs  lib.rs  main.rs  network.rs  spm.rs  structure.rs
src/data/: mod.rs  swiftlint_dto.rs
src/domain/: content.rs  mod.rs  platform_validator.rs  project_file.rs  spm.rs  spm_builder.rs  structure.rs  usecase.rs
src/domain/builder/: mod.rs  spm_builder.rs
src/domain/file/: mod.rs  project_file.rs  project_templates.rs
src/domain/platform/: mod.rs  platform_validator.rs
src/domain/repository/: mod.rs  swiftlint_repository.rs
src/domain/usecase/: usecase.rs
src/infrastructure/: mod.rs  network_client.rs
src/presentation/: cli_controller.rs  fields_results.rs  header.rs  mod.rs
tests/: header_snapshot_tests.rs  network_tests.rs  project_file_tests.rs  structure_tests.rs
tests/snapshots/: header_snapshot_tests__show_header_snapshot.snap
