[package]
name = "spm-swift-package"
version = "0.8.0"
edition = "2024"
authors = ["João Lucas <joaolucasfp2001@gmail.com>"]
license = "MIT"
description = "Command Line Tools for macOS to create project in Swift Package Manager with desirable files."
readme = "README.md"
repository = "https://github.com/heroesofcode/spm-swift-package"
exclude = [".github/**", ".api/*"]

[dependencies]
demand = "1.7.2"
clap = "4.5.49"
colored = "3.0.0"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
insta = "1.43.2"