[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.10.0"
edition = "2024"
license = "MIT"
authors = ["João Lucas <joaolucasfp2001@gmail.com>"]
description = "Command Line Tools for macOS to create project in Swift Package Manager with desirable files."
readme = "README.md"
repository = "https://github.com/heroesofcode/spm-swift-package"

[workspace.dependencies]
demand = "1.7.2"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
xshell = "0.2.7"
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
insta = "1.43.2"
iced = "0.14.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
