[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.19", features = ["json"] }

utoipa = "5.3.1"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }