[package]
name = "spm-swift-package"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
demand.workspace = true
clap.workspace = true
colored.workspace = true
tokio.workspace = true
spm_core = "0.2.0"

[dev-dependencies]
insta.workspace = true