[package]
name = "spm-swift-package"
default-run = "spm-swift-package"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
demand.workspace = true
clap.workspace = true
colored.workspace = true
tokio.workspace = true
iced.workspace = true

[dev-dependencies]
insta.workspace = true