[package]
name = "spm_core"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core business logic for spm-swift-package"
repository.workspace = true

[dependencies]
demand.workspace = true
colored.workspace = true
clap.workspace = true
tokio.workspace = true